# node-agent/swagger.json
@@ -1,209 +1,254 @@
 {
-    "swagger": "2.0",
-    "info": {
-        "description": "This is the swagger file for the MockFog2 agent. You can find out more about MockFog2 by visiting our GitHub [repository](https://github.com/MoeweX/MockFog2).",
-        "version": "3.0.0",
-        "title": "MockFog2",
-        "contact": {
-            "email": "hasenburg@tu-berlin.de"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        }
+  "swagger": "2.0",
+  "info": {
+    "description": "This is the swagger file for the MockFog2 agent. You can find out more about MockFog2 by visiting our GitHub [repository](https://github.com/MoeweX/MockFog2).",
+    "version": "3.0.0",
+    "title": "MockFog2",
+    "contact": {
+      "email": "hasenburg@tu-berlin.de"
     },
-    "basePath": "/v3",
-    "tags": [
-        {
-            "name": "network",
-            "description": "Network manipulation operations"
-        },
-        {
-            "name": "status",
-            "description": "Status of the node agent"
+    "license": {
+      "name": "Apache 2.0",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+    }
+  },
+  "basePath": "/v3",
+  "tags": [
+    {
+      "name": "status",
+      "description": "Status of the node agent"
+    },
+    {
+      "name": "network",
+      "description": "Network manipulation operations"
+    },
+    {
+      "name": "ping",
+      "description": "Ping to other machines"
+    }
+  ],
+  "schemes": [
+    "http",
+    "https"
+  ],
+  "paths": {
+    "/status/resources": {
+      "get": {
+        "tags": [
+          "status"
+        ],
+        "summary": "Get information on available resources",
+        "description": "Retrieve how much memory and how many CPU cores are available on the machine",
+        "operationId": "getMemory",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Was able to retrieve resource information",
+            "schema": {
+              "$ref": "#/definitions/resources"
+            }
+          },
+          "500": {
+            "description": "Could not retrieve network information",
+            "schema": {
+              "$ref": "#/definitions/error"
+            }
+          }
         }
-    ],
-    "schemes": [
-        "http"
-    ],
-    "paths": {
-        "/network/tcconfig": {
-            "put": {
-                "tags": [
-                    "network"
-                ],
-                "summary": "Update the network configuration",
-                "description": "Internally, this updates the network by appliying a tcconfig json file as produced by [tcshow](https://tcconfig.readthedocs.io/en/latest/pages/usage/tcshow/index.html)",
-                "operationId": "updateNetworkConfig",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "A tcconfig json as produced by the tcshow command.",
-                        "schema": {
-                            "$ref": "#/definitions/tcconfig"
-                        },
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Applied network update"
-                    },
-                    "500": {
-                        "description": "Error",
-                        "schema": {
-                            "$ref": "#/definitions/error"
-                        }
-                    }
-                }
+      }
+    },
+    "/network/tcconfig": {
+      "put": {
+        "tags": [
+          "network"
+        ],
+        "summary": "Update the network configuration",
+        "description": "Internally, this updates the network by appliying a tcconfig json file as produced by [tcshow](https://tcconfig.readthedocs.io/en/latest/pages/usage/tcshow/index.html)",
+        "operationId": "updateNetworkConfig",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "A tcconfig json as produced by the tcshow command.",
+            "schema": {
+              "$ref": "#/definitions/tcconfig"
             },
-            "get": {
-                "tags": [
-                    "network"
-                ],
-                "summary": "Get the currently applied network configuration",
-                "operationId": "getNetworkConfig",
-                "produces": [
-                    "application/json"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "The currently applied tcconfig",
-                        "schema": {
-                            "$ref": "#/definitions/tcconfig"
-                        }
-                    }
-                }
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Applied network update"
+          },
+          "500": {
+            "description": "Error",
+            "schema": {
+              "$ref": "#/definitions/error"
             }
-        },
-        "/ping/all": {
-            "get": {
-                "tags": [
-                    "ping"
-                ],
-                "summary": "Get the complete ping history to all hosts configured with tcconfig",
-                "operationId": "getPingHistory",
-                "produces": [
-                    "application/json"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "The complete ping history",
-                        "schema": {
-                            "$ref": "#/definitions/ping_history"
-                        }
-                    }
-                }
-            }
-        },
-        "/ping/last": {
-            "get": {
-                "tags": [
-                    "ping"
-                ],
-                "summary": "Get the last ping",
-                "operationId": "getLastPing",
-                "produces": [
-                    "application/json"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "The last ping",
-                        "schema": {
-                            "$ref": "#/definitions/ping_single"
-                        }
-                    }
-                }
-            }
+          }
         }
+      },
+      "get": {
+        "tags": [
+          "network"
+        ],
+        "summary": "Get the currently applied network configuration",
+        "operationId": "getNetworkConfig",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "The currently applied tcconfig",
+            "schema": {
+              "$ref": "#/definitions/tcconfig"
+            }
+          }
+        }
+      }
     },
-    "definitions": {
-        "tcconfig": {
-            "type": "object",
-            "properties": {
-                "eth0": {
-                    "type": "object",
-                    "properties": {
-                        "outgoing": {
-                            "type": "object"
-                        },
-                        "incoming": {
-                            "type": "object"
-                        }
-                    }
+    "/ping/all": {
+      "get": {
+        "tags": [
+          "ping"
+        ],
+        "summary": "Get the complete ping history to all hosts configured with tcconfig",
+        "operationId": "getPingHistory",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "The complete ping history",
+            "schema": {
+              "$ref": "#/definitions/ping_history"
+            }
+          }
+        }
+      }
+    },
+    "/ping/last": {
+      "get": {
+        "tags": [
+          "ping"
+        ],
+        "summary": "Get the last ping",
+        "operationId": "getLastPing",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "The last ping",
+            "schema": {
+              "$ref": "#/definitions/ping_single"
+            }
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "resources": {
+      "type": "object",
+      "properties": {
+        "memory": {
+          "type": "integer",
+          "description": "Memory available on machine in megabytes"
+        },
+        "cpu": {
+          "type": "number",
+          "description": "Number of available CPU cores"
+        }
+      }
+    },
+    "tcconfig": {
+      "type": "object",
+      "properties": {
+        "eth0": {
+          "type": "object",
+          "properties": {
+            "outgoing": {
+              "type": "object"
+            },
+            "incoming": {
+              "type": "object"
+            }
+          }
+        },
+        "eth1": {
+          "type": "object",
+          "properties": {
+            "outgoing": {
+              "type": "object",
+              "additionalProperties": true,
+              "example": {
+                "dst-network=10.0.2.33/32, protocol=ip": {
+                  "filter_id": "800::800",
+                  "delay": "10.0ms"
                 },
-                "eth1": {
-                    "type": "object",
-                    "properties": {
-                        "outgoing": {
-                            "type": "object",
-                            "additionalProperties": true,
-                            "example": {
-                                "dst-network=10.0.2.33/32, protocol=ip": {
-                                    "filter_id": "800::800",
-                                    "delay": "10.0ms"
-                                },
-                                "dst-network=10.0.2.76/32, protocol=ip": {
-                                    "filter_id": "800::801",
-                                    "delay": "12.0ms"
-                                }
-                            }
-                        },
-                        "incoming": {
-                            "type": "object"
-                        }
-                    }
+                "dst-network=10.0.2.76/32, protocol=ip": {
+                  "filter_id": "800::801",
+                  "delay": "12.0ms"
                 }
+              }
+            },
+            "incoming": {
+              "type": "object"
             }
-        },
-        "ping_history": {
-            "type": "array",
-            "items": {
-                "$ref": "#/definitions/ping_single"
-            }
-        },
-        "ping_single": {
-            "type": "array",
-            "items": {
-                "type": "object",
-                "properties": {
-                    "host": {
-                        "type": "string"
-                    },
-                    "ping": {
-                        "type": "string"
-                    },
-                    "packetLoss": {
-                        "type": "string"
-                    },
-                    "time": {
-                        "type": "integer"
-                    }
-                }
-            }
+          }
+        }
+      }
+    },
+    "ping_history": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/ping_single"
+      }
+    },
+    "ping_single": {
+      "type": "array",
+      "items": {
+        "type": "object",
+        "properties": {
+          "host": {
+            "type": "string"
+          },
+          "ping": {
+            "type": "string"
+          },
+          "packetLoss": {
+            "type": "string"
+          },
+          "time": {
+            "type": "integer"
+          }
+        }
+      }
+    },
+    "error": {
+      "type": "object",
+      "properties": {
+        "message": {
+          "type": "string",
+          "example": "Unexpected server error"
         },
         "error": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string",
-                    "example": "Unexpected server error"
-                },
-                "error": {
-                    "type": "object"
-                }
-            }
+          "type": "object"
         }
-    },
-    "externalDocs": {
-        "description": "Find out more about MockFog2",
-        "url": "https://github.com/MoeweX/MockFog2"
+      }
     }
+  },
+  "externalDocs": {
+    "description": "Find out more about MockFog2",
+    "url": "https://github.com/MoeweX/MockFog2"
+  }
 }
